--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "feed": "^4.2.2",
+    "fs": "^0.0.1-security",
     "microcms-js-sdk": "^2.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/rss": "^0.0.29",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.4"
