--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -7,7 +7,7 @@ on:
         default: "main"
         required: true
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: '0 15 * * *'
 jobs:
   deploy:
     runs-on: ubuntu-latest
