--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.30",
     "@types/gtag.js": "^0.0.8",
+    "@types/highlightjs": "^9.12.2",
+    "cheerio": "^1.0.0-rc.10",
     "date-fns": "^2.28.0",
     "feed": "^4.2.2",
     "fs": "^0.0.1-security",
+    "highlight.js": "^11.4.0",
     "microcms-js-sdk": "^2.0.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
