--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-paginate": "^8.1.2",
     "rss": "^1.2.2"
   },
   "devDependencies": {
