--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.inputs.ref }}
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
       - uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.TOKEN }}
