--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "microcms-js-sdk": "^2.0.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
+    "next-seo": "^5.15.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-paginate": "^8.1.2",
@@ -29,8 +30,11 @@
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@types/rss": "^0.0.29",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.0",
     "typescript": "4.5.4"
   }
 }
