--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@types/cheerio": "^0.22.30",
     "@types/gtag.js": "^0.0.8",
     "@types/highlightjs": "^9.12.2",
+    "@vercel/og": "^0.5.6",
     "cheerio": "^1.0.0-rc.10",
     "date-fns": "^2.28.0",
     "feed": "^4.2.2",
     "fs": "^0.0.1-security",
     "highlight.js": "^11.4.0",
     "microcms-js-sdk": "^2.0.0",
-    "next": "12.0.7",
+    "next": "^12.3.3",
     "next-pwa": "^5.4.4",
     "next-seo": "^5.15.0",
     "react": "17.0.2",
