--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/cheerio": "^0.22.30",
     "@types/gtag.js": "^0.0.8",
     "@types/highlightjs": "^9.12.2",
+    "@vercel/og": "^0.0.19",
     "cheerio": "^1.0.0-rc.10",
     "date-fns": "^2.28.0",
     "highlight.js": "^11.4.0",
