--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "date-fns": "^2.28.0",
     "highlight.js": "^11.4.0",
     "microcms-js-sdk": "^2.0.0",
-    "next": "^12.3.3",
+    "next": "^13.4.4",
     "next-pwa": "^5.4.4",
     "next-seo": "^5.15.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rss": "^1.2.2"
   },
   "devDependencies": {
