--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "microcms-js-sdk": "^2.0.0",
     "next": "^13.4.3",
     "next-pwa": "^5.4.4",
-    "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rss": "^1.2.2"
@@ -26,7 +25,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.2.0",
     "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
+    "@types/react": "^18.2.11",
     "@types/rss": "^0.0.29",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
