--- a/package.json
+++ b/package.json
@@ -11,22 +11,21 @@
     "@types/cheerio": "^0.22.30",
     "@types/gtag.js": "^0.0.8",
     "@types/highlightjs": "^9.12.2",
-    "@vercel/og": "^0.0.19",
     "cheerio": "^1.0.0-rc.10",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.30.0",
     "highlight.js": "^11.4.0",
-    "microcms-js-sdk": "^2.0.0",
+    "microcms-js-sdk": "^2.5.0",
     "next": "^13.4.3",
-    "next-pwa": "^5.4.4",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rss": "^1.2.2"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.2.0",
-    "@types/node": "17.0.8",
+    "@svgr/webpack": "^8.0.1",
+    "@types/node": "^20.3.0",
     "@types/react": "^18.2.11",
-    "@types/rss": "^0.0.29",
+    "@types/rss": "^0.0.30",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
     "eslint-config-next": "^13.4.5",
